# bastet

./: .gitignore  .ocamlformat  .travis.yml  BUILD.md  LICENSE  MIGRATION.md  Makefile  README.md  bastet.kra  bastet.opam  bsconfig.json  dune  dune-project  ocaml_abstract.opam  package-lock.json  package.json
.github/workflows/: workflow.yml
bastet/src/: Array.ml  Array.mli  Array.re  Array.rei  ArrayF.ml  ArrayF.re  Bool.ml  Default.ml  Dual.ml  Dual.re  Endo.ml  Float.ml  Float.re  Function.ml  Functions.ml  Functors.ml  Functors.re  Infix.ml  Infix.re  Int.ml  Int.re  Interface.ml  List.ml  List.re  Option.ml  Option.re  PPX_Let.ml  PPX_Let.re  Result.ml  Result.re  String.ml  Test.ml  Test.re  Tuple.ml  Tuple.re  Verify.ml  Verify.re  dune  index.mld.template
bastet/test/: AlcotestI.ml  AlcotestI.re  QCheckI.ml  QCheckI.re  Test_Array.ml  Test_Array.re  Test_Bool.ml  Test_Bool.re  Test_Default.ml  Test_Default.re  Test_Float.ml  Test_Float.re  Test_List.ml  Test_List.re  Test_Option.ml  Test_Option.re  Test_String.ml  Test_String.re  Test_bastet.ml  Test_bastet.re  dune
bastet_js/src/: Date.ml  Date.re  Dict.ml  Dict.re  JsArray.ml  JsArray.re  JsFloat.ml  Promise.ml
bastet_js/test/: JsVerifyI.ml  JsVerifyI.re  MochaI.ml  MochaI.re  Test_JsArray.ml  Test_JsArray.re  Test_JsBool.ml  Test_JsDate.ml  Test_JsDate.re  Test_JsDefault.ml  Test_JsDefault.re  Test_JsDict.ml  Test_JsDict.re  Test_JsDual.ml  Test_JsEndo.ml  Test_JsEndo.re  Test_JsFloat.ml  Test_JsFunction.ml  Test_JsFunctions.ml  Test_JsFunctions.re  Test_JsInt.ml  Test_JsList.ml  Test_JsOption.ml  Test_JsPPX_Let.ml  Test_JsPromise.ml  Test_JsResult.ml  Test_JsString.ml  Test_JsTuple.ml
docs/: index.html
docs/bastet/: index.html
docs/bastet/Bastet/: index.html
docs/bastet/Bastet/Array/: index.html
docs/bastet/Bastet/ArrayF/: index.html
docs/bastet/Bastet/Bool/: index.html
docs/bastet/Bastet/Default/: index.html
docs/bastet/Bastet/Dual/: index.html
docs/bastet/Bastet/Endo/: index.html
docs/bastet/Bastet/Float/: index.html
docs/bastet/Bastet__Array/: index.html
docs/bastet/Bastet__ArrayF/: index.html
docs/bastet/Bastet__Bool/: index.html
docs/bastet/Bastet__Default/: index.html
docs/bastet/Bastet__Dual/: index.html
docs/bastet/Bastet__Endo/: index.html
docs/bastet/Bastet__Float/: index.html
docs/bastet/Bastet__Function/: index.html
docs/bastet/Bastet__Functions/: index.html
docs/bastet/Bastet__Functors/: index.html
docs/bastet/Bastet__Infix/: index.html
docs/bastet/Bastet__Int/: index.html
docs/bastet/Bastet__Interface/: index.html
docs/bastet/Bastet__List/: index.html
docs/bastet/Bastet__Option/: index.html
docs/bastet/Bastet__PPX_Let/: index.html
docs/bastet/Bastet__Result/: index.html
docs/bastet/Bastet__String/: index.html
docs/bastet/Bastet__Test/: index.html
docs/bastet/Bastet__Tuple/: index.html
docs/bastet/Bastet__Verify/: index.html
docs/ocaml_abstract/: index.html
docs/ocaml_abstract/Ocaml_abstract/: index.html
docs/ocaml_abstract/Ocaml_abstract__Array/: index.html
docs/ocaml_abstract/Ocaml_abstract__Bool/: index.html
docs/ocaml_abstract/Ocaml_abstract__Default/: index.html
docs/ocaml_abstract/Ocaml_abstract__Dual/: index.html
docs/ocaml_abstract/Ocaml_abstract__Endo/: index.html
docs/ocaml_abstract/Ocaml_abstract__Float/: index.html
docs/ocaml_abstract/Ocaml_abstract__Function/: index.html
docs/ocaml_abstract/Ocaml_abstract__Functions/: index.html
docs/ocaml_abstract/Ocaml_abstract__Functors/: index.html
docs/ocaml_abstract/Ocaml_abstract__Infix/: index.html
docs/ocaml_abstract/Ocaml_abstract__Int/: index.html
docs/ocaml_abstract/Ocaml_abstract__Interface/: index.html
docs/ocaml_abstract/Ocaml_abstract__List/: index.html
docs/ocaml_abstract/Ocaml_abstract__Option/: index.html
docs/ocaml_abstract/Ocaml_abstract__PPX_Let/: index.html
docs/ocaml_abstract/Ocaml_abstract__Result/: index.html
docs/ocaml_abstract/Ocaml_abstract__String/: index.html
docs/ocaml_abstract/Ocaml_abstract__Test/: index.html
docs/ocaml_abstract/Ocaml_abstract__Tuple/: index.html
docs/ocaml_abstract/Ocaml_abstract__Verify/: index.html
examples/: AdditiveMonoid.md  ArrayMap.md  Associativity.md  CategoryMonoid.md  ComposeFn.md  ConjunctiveMonoid.md  DisjunctiveMonoid.md  Docs_template.ml  Hush.md  IOMonad.md  IdentityElement.md  IdentityFn.md  Int_Subtraction_Not_Associative.md  ListFunctor.md  ListMonoid.md  List_Apply.md  Magma.md  Monoid.md  MultiplicativeMonoid.md  OptionFunctor.md  OptionMonad.md  OptionMonadLaws.md  OptionMonoid.md  Semigroup.md  StringMonoid.md  dune
ocaml_abstract/: dune
ocaml_abstract/src/: Array.re  Bool.re  Interface.re  Test.re  dune  index.mld  index.mld.template
ocaml_abstract/test/: AlcotestI.re  QCheckI.re  Test_Array.re  Test_Bool.re  Test_Default.re  Test_Float.re  Test_List.re  Test_Option.re  Test_String.re  Test_ocaml_abstract.re  dune
ocaml_abstract_js/src/: JsFloat.re
ocaml_abstract_js/test/: MochaI.re  Test_Bool.re  Test_Dual.re  Test_Function.re  Test_Int.re  Test_JsArray.re  Test_JsBool.re  Test_JsDefault.re  Test_JsFloat.re  Test_JsInt.re  Test_JsList.re  Test_JsOption.re  Test_JsString.re  Test_JsTuple.re  Test_Option.re
src/: Array.re  Bool.re  Default.re  Dual.re  Endo.re  Float.re  Function.re  Functions.re  Functors.re  Infix.re  Int.re  Interface.re  List.re  Option.re  Promise.re  String.re  Tuple.re  Verify.re
src/functions/: Functions.re
src/implementations/: Array.re  Bool.re  Dual.re  Endo.re  Float.re  Function.re  Int.re  JsBool.re  JsDate.re  JsDict.re  List.re  Option.re  Promise.re  Result.re  String.re  Tuple.re
src/interfaces/: Infix.re  Interface.re  PPX_Let.re  Verify.re
src/utilities/: Default.re  Functors.re
test/: Mocha.re  Test_Array.re  Test_Bool.re  Test_Default.re  Test_Dual.re  Test_Endo.re  Test_Float.re  Test_Function.re  Test_Functions.re  Test_Int.re  Test_JsBool.re  Test_JsDate.re  Test_JsDict.re  Test_List.re  Test_Option.re  Test_PPX_Let.re  Test_Promise.re  Test_Result.re  Test_String.re  Test_Tuple.re
(+16060 files in other folders)
